bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
while (estSurMessage())
^BDR:1: error: Missing closing brace `}' assumed here
while (estSurMessage())
^BDR:1: error: expected class or object definition
while (estSurMessage())
^BDR:2: error: expected class or object definition
{if (litMessage() == "A") {
^